--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to https://example.com/</title>
-<meta http-equiv="refresh" content="0; URL=https://example.com/">
+<meta http-equiv="refresh" content="0; URL=abp:subscribe?location=https%3A%2F%2Fraw.githubusercontent.com%2Fxxcriticxx%2F.pl-host-file%2Fmaster%2Fhosts.txt&title=.pl-host-file">
 <link rel="canonical" href="https://example.com/">
