--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 <title>Redirecting to https://example.com/</title>
-<meta http-equiv="refresh" content="0; URL=https://subscribe.adblockplus.org/?location=https://raw.githubusercontent.com/LanikSJ/ubo-filters/main/filters/videoadex-domains.txt&title=VideoAdex%20Domains%20Filter%20List">
+<a href="https://subscribe.adblockplus.org/?location=https://raw.githubusercontent.com/LanikSJ/ubo-filters/main/filters/videoadex-domains.txt&title=VideoAdex%20Domains%20Filter%20List">clickable</a>
 <link rel="canonical" href="https://example.com/">
